syntax = "proto3";
option java_package = "net.octyl.rawr.gen.protos";
option java_multiple_files = true;

import "BasicTypes.proto";

message UploadId {
    // The upload ID.
    string id = 1;
}

message UploadPacket {
    // ID of the upload to continue.
    UploadId id = 1;
    // Content to upload.
    bytes content = 2;
}

message DownloadPacket {
    // Content from download.
    bytes content = 1;
}

message DownloadRequest {
    // ID of the file to read.
    ProtoUuid id = 1;
    // Offset into the file.
    int64 offset = 2;
    // Amount to read.
    int32 size = 3;
}
